# mkdocs-server

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  default.nix  docs_server.toml  entrypoint.sh  flake.nix  mcp_server.py  mkdocs.yml  package.nix  pyproject.toml  scanner.py
docs/: index.md
docs/plans/: mkdocs-server-plan.md
hooks/: discover_docs.py
src/docs_server/: __init__.py  config.py  mcp_server.py  scanner.py
src/docs_server/hooks/: __init__.py  discover_docs.py
tests/: test_discover_docs.py  test_mcp_server.py  test_scanner.py
