[project]
name = "workspace-docs-portal"
version = "0.1.0"
description = "Configurable Python documentation server with MkDocs and FastMCP for AI agent access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
docs-scanner = "docs_server.scanner:main"
docs-mcp-server = "docs_server.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
